--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,40 @@
 aniso8601==9.0.1
-attrs==21.2.0
-click==8.0.3
-Flask==2.0.2
-flask-restx==0.5.1
-importlib-metadata==4.8.1
-itsdangerous==2.0.1
-Jinja2==3.0.2
-jsonschema==4.1.2
-MarkupSafe==2.0.1
-pyrsistent==0.18.0
-pytz==2021.3
+atomicwrites==1.4.1
+attrs==22.1.0
+black==22.6.0
+blessings==1.7
+click==8.1.3
+colorama==0.4.5
+colour-runner==0.1.1
+flake8==3.9.2
+Flask==2.2.2
+flask-restx==1.0.3
+Flask-SQLAlchemy==3.0.2
+greenlet==2.0.1
+iniconfig==1.1.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+MarkupSafe==2.1.1
+marshmallow==3.19.0
+mccabe==0.6.1
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.9.0
+platformdirs==2.5.2
+pluggy==1.0.0
+prettytable==2.2.1
+py==1.11.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
+Pygments==2.10.0
+pyparsing==3.0.9
+pyrsistent==0.19.2
+pytest==7.1.2
+python-dotenv==0.21.0
+pytz==2022.6
 six==1.16.0
-typing-extensions==3.10.0.2
-Werkzeug==2.0.2
-zipp==3.6.0
+SQLAlchemy==1.4.44
+tomli==2.0.1
+wcwidth==0.2.5
+Werkzeug==2.2.2
